--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,59 @@
 <footer class="footer">
-  <div class="container"></div>
+  <div class="container grid">
+    <div class="footer__col">
+      <a href="#" class="logo footer__logo">
+        <img src="img/logo-footer.svg" alt="logotip" width="180" height="38" />
+      </a>
+    </div>
+    <div class="footer__col footer__col--flex">
+      <nav class="nav" title="Второстепенное меню">
+        <ul class="list-reset nav__list nav__list--footer">
+          <li class="nav__item nav__item--footer">
+            <a href="#" class="nav__link nav__link--footer">Главная</a>
+          </li>
+          <li class="nav__item nav__item--footer">
+            <a href="#" class="nav__link nav__link--footer">О предприятии</a>
+          </li>
+          <li class="nav__item nav__item--footer">
+            <a href="#" class="nav__link nav__link--footer">Новости</a>
+          </li>
+          <li class="nav__item nav__item--footer">
+            <a href="#" class="nav__link nav__link--footer">Продукция</a>
+          </li>
+          <li class="nav__item nav__item--footer">
+            <a href="#" class="nav__link nav__link--footer">Услуги</a>
+          </li>
+          <li class="nav__item nav__item--footer">
+            <a href="#" class="nav__link nav__link--footer">Поддержка</a>
+          </li>
+          <li class="nav__item nav__item--footer">
+            <a href="#" class="nav__link nav__link--footer"
+              >География поставок</a
+            >
+          </li>
+          <li class="nav__item nav__item--footer">
+            <a href="#" class="nav__link nav__link--footer">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="list-reset footer__list">
+        <li class="footer__item">
+          <a href="#" class="footer__link nav__link nav__link--footer">Файлы</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link nav__link nav__link--footer"
+            >Поддержка</a
+          >
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link nav__link nav__link--footer"
+            >Политика конфеденциальности</a
+          >
+        </li>
+      </ul>
+    </div>
+    <div class="footer__col footer__col--full">
+      <span class="footer__copyright">1994 — 2020 ООО «ПИОНЕР»</span>
+    </div>
+  </div>
 </footer>
