--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,30 +2,36 @@
   <div class="container">
     <div class="header__top">
       <a href="#" class="logo header__logo">
-        <img src="img/header-logo.svg" alt="Logotip" width="180" height="38">
+        <img src="img/header-logo.svg" alt="Logotip" width="180" height="38" />
       </a>
       <div class="header__contacts">
         <div class="header__contact">
           <span class="header__caption">По вопросам и предложениям</span>
-          <a href="mailto:pionerr@sila.ru" class="header__link">pionerrr@sila.ru</a>
+          <a href="mailto:pionerr@sila.ru" class="header__link"
+            >pionerrr@sila.ru</a
+          >
         </div>
         <div class="header__contact">
           <span class="header__caption">Для консультаций</span>
-          <a href="tel:++74954562421" class="header__link">+7 (495) 456-24-21</a>
+          <a href="tel:+74954562421" class="header__link">+7 (495) 456-24-21</a>
         </div>
       </div>
     </div>
     <div class="header__bottom">
       <nav class="nav" title="glavnaia navigatia">
         <ul class="nav__list list-reset">
-          <li class="nav__item"><a class="nav__link " href="#">Главная</a></li>
-          <li class="nav__item"><a class="nav__link " href="#">О предприятии</a></li>
-          <li class="nav__item"><a class="nav__link " href="#">Новости</a></li>
-          <li class="nav__item"><a class="nav__link " href="#">Продукция</a></li>
-          <li class="nav__item"><a class="nav__link " href="#">Услуги</a></li>
-          <li class="nav__item"><a class="nav__link " href="#">Поддержка</a></li>
-          <li class="nav__item"><a class="nav__link " href="#">География поставок</a></li>
-          <li class="nav__item"><a class="nav__link " href="#">Контакты</a></li>
+          <li class="nav__item"><a class="nav__link" href="#">Главная</a></li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">О предприятии</a>
+          </li>
+          <li class="nav__item"><a class="nav__link" href="#">Новости</a></li>
+          <li class="nav__item"><a class="nav__link" href="#">Продукция</a></li>
+          <li class="nav__item"><a class="nav__link" href="#">Услуги</a></li>
+          <li class="nav__item"><a class="nav__link" href="#">Поддержка</a></li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">География поставок</a>
+          </li>
+          <li class="nav__item"><a class="nav__link" href="#">Контакты</a></li>
         </ul>
       </nav>
       <button class="btn-reset header__btn">
