--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -1,21 +1,49 @@
-.nav__list {
-  display: flex;
-}
+.nav {
+  &__list {
+    display: flex;
+    align-items: center;
+    gap: 44px;
 
-.nav__item {
-  &:not(:last-child) {
-    margin-right: var(--menugap);
+    &--footer {
+      display: block;
+      columns: 2;
+      max-width: 343px;
+    }
+
+    @include small-desktop {
+      gap: 24px;
+    }
+
+    @include tablet {
+      flex-direction: column;
+      align-items: flex-start;
+    }
   }
-}
 
-.nav__link {
-  color: var(--dark, #333);
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 120%;
-  transition: all 0.3s ease-in-out;
+  &__item {
+    &--footer {
+      &:not(:last-child) {
+        margin-bottom: 24px;
+      }
+    }
+  }
 
-  &:hover {
-    color: var(--accent);
+  &__link {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 120%;
+    color: var(--dark);
+    transition: all 0.3s ease-in-out;
+
+    &--footer {
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 120%;
+      color: var(--light);
+    }
+
+    &:hover {
+      color: var(--accent);
+    }
   }
 }
