--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,3 +10,6 @@
 @import "./components/hero";
 @import "./components/about";
 @import "./components/production";
+@import "./components/present";
+@import "./components/news";
+@import "./components/footer";
